--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<name>kafka-connector</name>
-	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
+	
+	<url>https://github.com/behooked/kafka-connector</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
